# tarpitd.py

./: 404.html  README.md  README.zh.md  index.html  mkdocs.yml  pyproject.toml
about/: index.html
docs/: about.md  getting-started.md  index.md  tarpitd.conf.5.md  tarpitd.py.1.md  tarpitd.py.7.md
docs/manual/: index.md  tarpitd.conf.5.md  tarpitd.py.1.md
getting-started/: index.html
manual/: index.html
manual/tarpitd.conf.5/: index.html
manual/tarpitd.py.1/: index.html
misc/: do_str_split.py  inert_doc.py  insert_doc.py  tarpitd-serivce.7.md  tarpitd.py.1.md  tarpitd.py.7.md  tarpitd.toml.example  tarpitd_example.conf
search/: search_index.json
src/: tarpitd.py  tarpitd_import_guard.py  test_main.py  test_tarpitd.py
tarpitd.conf.5/: index.html
tarpitd.py.1/: index.html
tests/: test_main.py
