[project]
name = "tarpitd"
version = "0.0.1"
dependencies = []

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
"tarpitd.py" = "tarpitd_import_guard:main_cli"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"] 