[project]
name = "tarpitd"
version = "0.0.2"
description = "A daemon making a port into tarpit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nianqing Yao", email = "imbeatchild@outlook.com" }]
classifiers = [
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ImBearChild/tarpitd.py"
Issues = "https://github.com/ImBearChild/tarpitd.py/issues"

[project.scripts]
"tarpitd.py" = "tarpitd_import_guard:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
[tool.hatch.build]
[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/tarpitd.py" = "tarpitd.py"
"src/tarpitd_import_guard.py" = "tarpitd_import_guard.py"

[tool.hatch.env]
requires = ["hatch-mkdocs"]

[tool.hatch.env.collectors.mkdocs.docs]
path = "mkdocs.yml"

[tool.hatch.envs.devtool]
dependencies = [
  "pytype"
]
[tool.hatch.envs.devtool.scripts]
type = "pytype ./src/tarpitd.py"

[[tool.hatch.envs.devtool.matrix]]
python = ["3.11"]

[tool.hatch.envs.hatch-test]
default-args = ["src"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11"]


[tool.tombi]
[tool.tombischema]
enabled = true
strict = false